--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
     "morgan": "~1.9.1",
-    "pug": "^2.0.3"
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0"
   }
 }
