--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
