--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
     "morgan": "~1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "path": "^0.12.7"
   }
 }
