--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
+    "faker": "^4.1.0",
     "fb": "^2.0.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
