--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.5.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
+    "numeral": "^2.0.6",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "path": "^0.12.7"
