--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -26,6 +27,9 @@
     "numeral": "^2.0.6",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "puppeteer": "^1.17.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
