--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "puppeteer": "^1.17.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "swagger-stats": "^0.95.7"
+    "swagger-stats": "^0.95.7",
+    "unescape": "^1.0.1"
   }
 }
