--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "faker": "^4.1.0",
     "fb": "^2.0.0",
     "fs": "0.0.1-security",
+    "html-entities": "^1.2.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.2.5",
     "mongoose": "^5.5.10",
